--- a/net-ninja/src/index.css
+++ b/net-ninja/src/index.css
@@ -42,6 +42,7 @@
 }
 .blog-preview:hover {
   box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+  transition: 0.25s;
 }
 .blog-preview h2 {
   font-size: 20px;
